--- a/src/app/components/user/usercard1/usercard1.component.html
+++ b/src/app/components/user/usercard1/usercard1.component.html
@@ -10,7 +10,7 @@
                     </figure>
                     <div class="media-body customize-position-image">
                         <h6 class="pmd-list-title">
-                            <a [routerLink]="['/user', user.username]" title="">{{user.username}}</a>
+                            <a [routerLink]="['/user', username]" title="">{{username}}</a>
                         </h6>
                         <!--<button *ngIf="loggedUser.username != user.username" type="button" [class]="followCntrlCSS"
                                 (click)="followEntity()">
