--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -8,7 +8,8 @@
                 <div class="ml-2">
                     <div class="h5 m-0">
                         <a [routerLink]="['/user', post.entityId]" title="">{{post.entityId}}</a>
-                    </div>
+                        
+                   </div>
 
                     <div class="text-muted h7 mb-2">
                         <i class="fa fa-clock-o"></i>
@@ -46,8 +47,9 @@
                     </div>
                 </div>
             </div>-->
+            <button *ngIf="idx==0 && selfActivities" (click)="toggleNewPost()" class="open-post" title="New Post"><i class='fa fa-flag-o'></i></button>
         </div>
-
+       
     </div>
     <div class="card-body">
 
