--- a/src/app/components/post/postcard/postcard.component.css
+++ b/src/app/components/post/postcard/postcard.component.css
@@ -234,7 +234,11 @@ form button {
 .open-post{
   background: none;
   border: none;
+  float: right;
 }
+
+
+
 .open-post:focus{
   background: none;
   border: none;
