--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -1,3 +1,8 @@
+<!-- <div  *ngIf="idx==0 && selfActivities" id="newpost-on-selfactivites" >
+    <button  (click)="toggleNewPost()" class="open-post" title="Start New Conversation"><i class='fa fa-flag-o'></i></button>
+
+</div> -->
+
 <div class="card gedf-card post-list"  *ngIf="isComment==false">
     <div class="card-header post-header">
         <div class="d-flex justify-content-between align-items-center">
@@ -47,7 +52,6 @@
                     </div>
                 </div>
             </div>-->
-            <button *ngIf="idx==0 && selfActivities" (click)="toggleNewPost()" class="open-post" title="New Post"><i class='fa fa-flag-o'></i></button>
         </div>
        
     </div>
