mobile view css changes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -64,6 +64,12 @@ a {
     width: 97%;
     margin: 0 auto;
 }
+@media only screen and (max-width: 600px) {
+    .container-fluid {
+    width: 90%;
+    margin: 0 auto;
+    }
+}
 
 .container-custom {
     position: relative;
