--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -2,9 +2,10 @@
     background-color:#FBFCFC;
 }
 .open-post{
-    background: none;
-    border: none;
-    float: right;
+  background-color: black;
+  border: none;
+  color: white;
+  float: right;
   }
   .sticky-new-post{
     position: fixed;
@@ -17,9 +18,9 @@
   @media only screen and (max-width: 600px) {
     .sticky-new-post{
         position: fixed;
-        top: 48px;
+        top: 50px;
         float: right;
-        width: 98%;
+        width: 95%;
         z-index: 3;
       }
   }
