--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <button *ngIf="isMobile && isUserLogged" type="button" [ngbPopover]="shareContent"  #p="ngbPopover"  class="notify-button"><i *ngIf="notifications" class="fa fa-bell-o" aria-hidden="true"></i><span class="circle">{{notifications.length}}</span></button>
+      <button *ngIf="isMobile && isUserLogged" type="button" [ngbPopover]="shareContent"  #p="ngbPopover"  class="notify-button"><i *ngIf="notifications" class="fa fa-bell-o" aria-hidden="true"></i><span class="circle" *ngIf="notifications">{{notifications.length}}</span></button>
       <button *ngIf="isMobile" type="button" [ngbPopover]="popContent"  #p="ngbPopover"  class="mobile-avatar-button"> <img src="assets/images/avatars/avatar.png" class="img-responsive"/></button>
 
       <!-- <ul *ngIf="isMobile" class="navbar-nav">
@@ -17,7 +17,7 @@
           </li>
           
       </ul> -->
-      <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngbCollapse]="isCollaped">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngbCollapse]="isCollaped" [style.height.px]="screenHeight">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" (click)="clickedNav()" [ngClass]="{'active': activeTab=='news'}"  routerLink="news" routerLinkActive="active"><i class="fa fa-rss"></i>News</a>
@@ -153,7 +153,7 @@
 </nav>
 <body>
 <div class="container-fluid">
-  <div class="ng-autocomplete common-search" *ngIf="isMobile">
+  <!-- <div class="ng-autocomplete common-search" *ngIf="isMobile">
       <ng-autocomplete
         [data]="searchUsers"
         (inputChanged) = "onChangeSearch($event)"
@@ -175,7 +175,7 @@
       <ng-template #notFoundTemplate let-notFound>
         <div [innerHTML]="notFound"></div>
       </ng-template>
-    </div>
+    </div> -->
   <div class="row">
 
       <div class="d-lg-none d-xl-none col-xs-12">
