css changes home page & based on changed other pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -151,7 +151,7 @@
       </form>
   </div>
 </nav>
-<body>
+<!-- <body> -->
 <div class="container-fluid">
   <!-- <div class="ng-autocomplete common-search" *ngIf="isMobile">
       <ng-autocomplete
@@ -178,14 +178,14 @@
     </div> -->
   <div class="row">
 
-      <div class="d-lg-none d-xl-none col-xs-12">
+      <!-- <div class="d-lg-none d-xl-none col-xs-12"> -->
           <!--<a href="javascript:void(0)" class="mx-auto d-flex justify-content-center flex-wrap">
               <img src="assets/images/avatars/avatar.png" class="img-responsive text-center mx-auto d-flex justify-content-center flex-wrap"/>
           </a>-->
-      </div>
+      <!-- </div> -->
 
 
-      <div class="col-lg-2 ">
+      <!-- <div class="col-lg-2 "> -->
           <!--<div class=" aff-right">
               <div class="ui-block">
                   <h6 class="my-4">Recent</h6>
@@ -214,16 +214,16 @@
                   </div>
               </div>
           </div>-->
-      </div>
+      <!-- </div> -->
       <!-- /.col-lg-3 -->
-      <div class="col-lg-8">
+      <div class="col-lg-12">
           <app-alert [dismissOnTimeout]=3000></app-alert>
           <router-outlet></router-outlet>
 
       </div> 
       <!-- /.col-lg-6 -->
       <!--col-lg-3-->
-      <div class="col-lg-2">
+      <!-- <div class="col-lg-2"> -->
           <!--<div class=" q-wid">
               <div class="ui-block">
                   <h6 class="my-4">Today's News and Views</h6>
@@ -247,10 +247,10 @@
                   </div>
               </div>
           </div>-->
-      </div>
+      <!-- </div> -->
       <!-- /.col-lg-3 -->
   </div>
 </div>
 <!-- /.container -->
 <!-- The Modal -->
-</body>
+<!-- </body> -->
