--- a/src/app/components/connection/connectionlist/connectionlist.component.html
+++ b/src/app/components/connection/connectionlist/connectionlist.component.html
@@ -1,5 +1,5 @@
 
-
+<div class="news-div">
  <div class="card tab-card">
     <div class="card-header tab-card-header">
      
@@ -48,3 +48,4 @@
 
     </div>
   </div>
+</div>
