--- a/src/app/components/g-address-search/g-address-search.component.html
+++ b/src/app/components/g-address-search/g-address-search.component.html
@@ -1,4 +1,4 @@
-Address: <input class="addressSearchInput"
+<input class="addressSearchInput"
         type="text"
         [(ngModel)]="autocompleteInput"
         #addresstext
