--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,8 @@
-<div class="row">
+<!-- <div class="row">
   <div>
     <p>
       What GoPolitix is all about ???
     </p>
-    <!--<img src="/assets/images/logo.png">   -->
   </div>
 </div>
 
@@ -49,4 +48,116 @@
     </button>
   </div>
 </div>
+ -->
+ <app-searchlegislators></app-searchlegislators>
 
+ <!-- <div class="banner"> 
+
+
+
+
+ <div class="container">
+  <div class="banner-caption">
+      <div class="col-md-12 col-sm-12 banner-text">
+          <h3>We Are Available On</h3>
+<h1>Go <span>Politix</span></h1>
+          <div class="full-search-2 eclip-search italian-search hero-search-radius">
+<div class="hero-search-content">
+  
+  <div class="row">
+  
+    <div class="col-md-8 small-padd b-r">
+      <div class="form-group">
+        <div class="input-with-icon">
+          <app-g-address-search adressType="geocode"></app-g-address-search>
+          <i class="ti-location-pin"></i>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-4 small-padd b-r">
+      <div class="form-group">
+        <div class="input-with-icon">
+          <input type="text" class="form-control" placeholder="Apt">
+          <i class="ti-search"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-8 small-padd">
+      <div class="form-group">
+        <div class="input-with-icon">
+          <input type="text" class="form-control" placeholder="Email Address">
+          <i class="ti-envelope"></i>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-4 small-padd search-btn-div">
+      <div class="form-group">
+        <div class="form-group">
+          <a href="#" class="btn btn-primary search-btn">Find</a>
+        </div>
+      </div>
+    </div>
+    
+  </div>
+  
+</div>
+</div>
+      </div>
+  </div>
+</div>
+</div> -->
+<div class="clearfix"></div>
+<section>
+  <div class="container">
+      <div class="row">
+          <div class="main-heading">
+              <h2>What GoPolitix is all  <span>about ???</span></h2></div>
+      </div>
+      <div class="row">
+          <div class="col-md-6 col-sm-6">
+              <div class="category-box" data-aos="fade-up">
+                  <div class="category-desc">
+                      <div class="category-icon"><i class="fa fa-bar-chart" aria-hidden="true"></i><i class="fa fa-bar-chart abs-icon" aria-hidden="true"></i></div>
+                      <div class="category-detail category-desc-text">
+                          <p>Explore, Connect and Engage with your Local communities, Townships, County, State and Federal legislative representatives, Bills, Political Party, Friends, Places and more.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6 col-sm-6">
+              <div class="category-box" data-aos="fade-up">
+                  <div class="category-desc">
+                      <div class="category-icon"><i class="fa fa-comments-o" aria-hidden="true"></i><i class="fa fa-comments-o abs-icon" aria-hidden="true"></i></div>
+                      <div class="category-detail category-desc-text">
+                          <p>Post, Comment and get informed about your interested body.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6 col-sm-6">
+              <div class="category-box" data-aos="fade-up">
+                  <div class="category-desc">
+                      <div class="category-icon"><i class="fa fa-newspaper-o" aria-hidden="true"></i><i class="fa fa-newspaper-o abs-icon" aria-hidden="true"></i></div>
+                      <div class="category-detail category-desc-text">
+                          <p>Create Page of your interest, Invite people to engage, and Popularize your interest. You can also keep your private closed groups.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6 col-sm-6">
+              <div class="category-box" data-aos="fade-up">
+                  <div class="category-desc">
+                      <div class="category-icon"><i class="fa fa-users" aria-hidden="true"></i><i class="fa fa-users abs-icon" aria-hidden="true"></i></div>
+                      <div class="category-detail category-desc-text">
+                          <p>It’s a place to better understand your environment.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          
+      </div>
+  </div>
+</section>
