--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,13 +1,14 @@
-<app-newpost (newpost)="PostNewEvent($event)" *ngIf="!disableNewPost && isShowAllPosts" [selfActivities]="selfActivities"></app-newpost>
+<div class="news-div">
+<app-newpost class="new-posts" (newpost)="PostNewEvent($event)" *ngIf="!disableNewPost && isShowAllPosts" [selfActivities]="selfActivities"></app-newpost>
 
 
-<div class="card gedf-card post-list">
+<div class="card gedf-card post-list post-list-all">
     <div *ngIf="selfActivities" id="newpost-on-selfactivites">
         <button  (click)="openNewPost($event)" class="open-post" title="Start New Conversation"><i class='fa fa-flag-o'></i></button>
 
     </div>
 
-    <div *ngIf="posts.length > 0">
+    <div *ngIf="posts.length > 0" class="all-posts-div">
         <cdk-virtual-scroll-viewport style="height: 550px" class="all-posts" itemSize="90" (scroll)="onPostScroll($event)">
             <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i" [selfActivities]="selfActivities">
             </app-postcard>
@@ -17,4 +18,5 @@
     <div *ngIf="posts.length < 1">
         No Post to show 
     </div>
+</div>
 </div>
