--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<!-- <div class="container">
 <div class="row legisBoundary">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     Find Representatives:
@@ -47,4 +47,60 @@
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow" *ngFor="let legislator of legislators">
           <app-legislator [legislator]=legislator></app-legislator>
         </div>
+      </div> -->
+
+
+      <div class="banner">
+      <div class="container">
+        <div class="banner-caption">
+            <div class="col-md-12 col-sm-12 banner-text">
+                <h3>We Are Available On</h3>
+    <h1>Go <span>Politix</span></h1>
+                <div class="full-search-2 eclip-search italian-search hero-search-radius">
+      <div class="hero-search-content">
+        
+        <div class="row">
+        
+          <div class="col-md-8 small-padd b-r">
+            <div class="form-group">
+              <div class="input-with-icon">
+                <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
+                <i class="ti-location-pin"></i>
+              </div>
+            </div>
+          </div>
+          
+          <!-- <div class="col-md-4 small-padd b-r">
+            <div class="form-group">
+              <div class="input-with-icon">
+                <input type="text" class="form-control" placeholder="Apt">
+                <i class="ti-search"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-8 small-padd">
+            <div class="form-group">
+              <div class="input-with-icon">
+                <input type="text" class="form-control" placeholder="Email Address">
+                <i class="ti-envelope"></i>
+              </div>
+            </div>
+          </div> -->
+          
+          <div class="col-md-4 small-padd search-btn-div">
+            <div class="form-group">
+              <div class="form-group">
+                <a href="#" class="btn btn-primary search-btn" (click)="loadCongressData()">Find</a>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        
       </div>
+    </div>
+            </div>
+        </div>
+    </div>
+    </div>
