--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -61,8 +61,9 @@ a {
 
 .container-fluid {
     /*max-width: 1100px;*/
-    width: 97%;
-    margin: 0 auto;
+    width: 100%;
+    overflow-x: hidden;
+    /* margin: 0 auto; */
 }
 @media only screen and (max-width: 600px) {
     .container-fluid {
@@ -315,3 +316,5 @@ div#v-pills-tab a {
   #navbar {
       padding: 0px !important;
   }
+
+ 
