fixed login for offline development

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -53,10 +53,12 @@
   <div class="container">
     <div class="banner-caption">
         <div class="col-md-12 col-sm-12 banner-text">
-
+          <h3>Place to Engage with your Legislative Representatives and Local community.</h3>
+                      <!-- <div class="full-search-2 eclip-search italian-search hero-search-radius">
+            <div class="hero-search-content"> -->
  <div class="full-search-2 eclip-search italian-search hero-search-radius">
   <div class="hero-search-content">
- <app-searchlegislators></app-searchlegislators>
+ <app-searchlegislators [registration]=true></app-searchlegislators>
 </div>
  <!-- </div>
  </div> -->
@@ -126,10 +128,12 @@
 <div class="clearfix"></div>
 <section>
   <div class="container">
+    <!--
       <div class="row">
           <div class="main-heading">
               <h2>What GoPolitix is all  <span>about ???</span></h2></div>
       </div>
+    -->
       <div class="row">
           <div class="col-md-6 col-sm-6">
               <div class="category-box" data-aos="fade-up">
