--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -86,7 +86,7 @@
           <div class="col-md-4 small-padd search-btn-div">
             <div class="form-group">
               <div class="form-group">
-                <a href="#" class="btn btn-primary search-btn" (click)="loadCongressData()">Find</a>
+                <a href="#" class="btn btn-primary search-btn" (click)="loadCongressData()">{{searchBtnLabel}}</a>
               </div>
             </div>
           </div>
